--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New page</title>
+    <title>Git and Github</title>
 </head>
 <body>
-    
+    <h1>Main page</h1>
 </body>
 </html>
