--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Git and Github</title>
 </head>
 <body>
-    <h1>Main page</h1>
+    <main>
+      <h1>Main page</h1>
+    </main>
 </body>
 </html>
