--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <body>
     <main>
       <h1>Page</h1>
+        
+      <p>
+        The blog in the tag main
+      </p>
     </main>
-    <p>
-        The blog
-    </p>
 </body>
 </html>
