feat: text tag title has been changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub tutorial</title>
+    <title>Practical GitHub</title>
 </head>
 <body>
     <main>
